--- a/src/app/home/main/main.component.html
+++ b/src/app/home/main/main.component.html
@@ -68,7 +68,9 @@
                         <dd>{{srch.GuestMax}}명</dd>
                     </dl>
                 </div>
-                <button class="reserv_item reserv_btn" (click)="srchList()">예약하기</button>
+                <div class="reserv_item reserv_btn"  (click)="srchList()">
+                    <button>예약하기</button>
+                </div>
             </div>
         </div>
     </div>
