--- a/src/app/home/accom-list/accom-list.component.html
+++ b/src/app/home/accom-list/accom-list.component.html
@@ -7,77 +7,77 @@
             <h2>지역별 펜션</h2>
         </div>
     </div>
-    <section class="sec_sub_search">
-        <div class="search_reserv">
-            <div class="content">
-                <div class="reserv_box">
-                    <div class="reserv_item loc">
-                        <!-- 레이어 팝업(지역) -->
+    
+    <div class="reserv">
+        <div class="content">
+            <div class="dp_td reserv_box">
+                <div class="reserv_item loc">
+                    <!-- (확인) 1200px 이하에서는 레이어 팝업이 날짜처럼 화면 가운데에 뜨게 해주세요 -->
+                    <!-- 레이어 팝업(지역) -->
                         <div class="reserv_layer loc" *ngIf="areaToggle">
-                            <ul>
-                                <li (click)="setArea($event)"><a role="button">전국</a></li>
-                                <li (click)="setArea($event)"><a role="button">서울/경기/인천</a></li>
-                                <li (click)="setArea($event)"><a role="button">충청/대전</a></li>
-                                <li (click)="setArea($event)"><a role="button">전라/광주</a></li>
-                                <li (click)="setArea($event)"><a role="button">경상/대구/부산/울산</a></li>
-                                <li (click)="setArea($event)"><a role="button">강원</a></li>
-                                <li (click)="setArea($event)"><a role="button">제주</a></li>
-                            </ul>
-                        </div>
-                        <!-- //레이어 팝업(지역) -->
-                        <dl (click)="areaToggle = !areaToggle">
-                            <dt>지역</dt>
-                            <dd>{{ areaText }}</dd>
-                        </dl>
+                        <ul>
+                            <li (click)="setArea($event)"><a role="button">전국</a></li>
+                            <li (click)="setArea($event)"><a role="button">서울/경기/인천</a></li>
+                            <li (click)="setArea($event)"><a role="button">충청/대전</a></li>
+                            <li (click)="setArea($event)"><a role="button">전라/광주</a></li>
+                            <li (click)="setArea($event)"><a role="button">경상/대구/부산/울산</a></li>
+                            <li (click)="setArea($event)"><a role="button">강원</a></li>
+                            <li (click)="setArea($event)"><a role="button">제주</a></li>
+                        </ul>
                     </div>
-                    <div class="reserv_item date">
-                        <!-- 레이어 팝업(날짜) -->
-                        <div class="reserv_layer date" style="display: none;">
-                        </div>
-                        <!-- //레이어 팝업(날짜) -->
-                        <mat-datepicker-toggle #matDateToggle [for]="picker" style="display: none;"></mat-datepicker-toggle>
-                        <mat-date-range-picker #picker touchUi (closed)="finishedPickDate()"></mat-date-range-picker>
-                        <mat-date-range-input #rangeInput [rangePicker]="picker"
-                            [min]="today" [max]="maxDay" separator=""
-                            style="width: 0; height: 0;">
-                            <input matStartDate placeholder="Start date">
-                            <input matEndDate placeholder="End date">
-                        </mat-date-range-input>
-                        <dl>
-                            <dt>예약일자</dt>
-                            <dd (click)="openDatePicker()">{{startDate | customdate : 'kor'}}</dd>
-                        </dl>
-                        <dl>
-                            <dt>퇴실일자</dt>
-                            <dd (click)="openDatePicker()">{{endDate | customdate : 'kor'}}</dd>
-                        </dl>
-                    </div>
-                    <div class="reserv_item number">
-                        <!-- 레이어 팝업(인원) -->
+                    <!-- //레이어 팝업(지역) -->
+                    <dl (click)="areaToggle = !areaToggle">
+                        <dt>지역</dt>
+                        <dd>{{ areaText }}</dd>
+                    </dl>
+                </div>
+                <div class="reserv_item date">
+                    <mat-datepicker-toggle #matDateToggle [for]="picker" style="display: none;"></mat-datepicker-toggle>
+                    <mat-date-range-picker #picker touchUi (closed)="finishedPickDate()"></mat-date-range-picker>
+                    <mat-date-range-input #rangeInput [rangePicker]="picker"
+                        [min]="today" [max]="maxDay" separator=""
+                        style="width: 0; height: 0;">
+                        <input matStartDate placeholder="Start date">
+                        <input matEndDate placeholder="End date">
+                    </mat-date-range-input>
+                    <dl>
+                        <dt>예약일자</dt>
+                        <dd (click)="openDatePicker()">{{startDate | customdate : 'kor'}}</dd>
+                    </dl>
+                    <dl>
+                        <dt>퇴실일자</dt>
+                        <dd (click)="openDatePicker()">{{endDate | customdate : 'kor'}}</dd>
+                    </dl>
+                </div>
+                <div class="reserv_item number">
+                    <!-- 레이어 팝업(인원) -->
                         <div class="reserv_layer number" *ngIf="guestToggle">
-                            <dl>
-                                <dt>인원</dt>
-                                <dd>
-                                    <div class="countNum_box">
-                                        <button class="minus_btn" (click)="srch.GuestMax = srch.GuestMax === 2 ? 2 : srch.GuestMax - 1"></button>
-                                        <input type="text" class="count_inp" [value]="srch.GuestMax" disabled>
-                                        <button class="plus_btn" (click)="srch.GuestMax = srch.GuestMax === 15 ? 15 : srch.GuestMax + 1"></button>
-                                    </div>
-                                </dd>
-                            </dl>
-                        </div>
-                        <!-- //레이어 팝업(인원) -->
-                        <dl (click)="guestToggle = !guestToggle">
-                            <dt>인원수</dt>
-                            <dd>{{srch.GuestMax}}명</dd>
+                        <dl>
+                            <dt>인원</dt>
+                            <dd>
+                                <div class="countNum_box">
+                                    <button class="minus_btn" (click)="srch.GuestMax = srch.GuestMax === 2 ? 2 : srch.GuestMax - 1"></button>
+                                    <input type="text" class="count_inp" [value]="srch.GuestMax" disabled>
+                                    <button class="plus_btn" (click)="srch.GuestMax = srch.GuestMax === 15 ? 15 : srch.GuestMax + 1"></button>
+                                </div>
+                            </dd>
                         </dl>
                     </div>
-                    <button class="reserv_item reserv_btn" (click)="getList()">검색</button>
+                    <!-- //레이어 팝업(인원) -->
+                    <dl (click)="guestToggle = !guestToggle">
+                        <dt>인원수</dt>
+                        <dd>{{srch.GuestMax}}명</dd>
+                    </dl>
+                </div>
+                <!-- (확인) div 자체에 스크립트 걸어주세요 (div 내 버튼 삭제 예정) -->
+                <div class="reserv_item reserv_btn" (click)="getList()">
+                    <button>예약하기</button>
                 </div>
             </div>
         </div>
-    </section>
-    <section class="sec_sub_recomm">
+    </div>
+
+    <section id="sec_sub_recomm">
         <div class="content">
             <h2>이 지역 추천상품</h2>
             <div class="recomm_box arrow_box">
@@ -85,7 +85,7 @@
                 <ul class="ul_h">
                     <!-- loop -->
                     <li *ngFor="let item of recommandList" (click)="goDetail(item.AcomId)">
-                        <a>
+                        <a href="#">
                             <div class="recomm_item_img">
                                 <div class="recomm_item_desc">
                                     <p class="loc_tag">{{ item.Addr1 | sido }}</p>
@@ -104,38 +104,42 @@
                             </div>
                         </a>
                     </li>
+                    <!-- loop -->
                 </ul>
                 <button class="arrow next_arrow"></button>
             </div>
         </div>
     </section>
-    <section class="sec_sub_list">
+    <section id="sec_sub_list">
         <div class="content">
             <h2>이 지역 일반상품</h2>
-            <span class="title_desc">전체 <span class="point_c">{{ list.length }}</span>개</span>
+            <p class="title_desc">전체 <span class="point_c">{{ list.length }}</span>개</p>
             <div>
                 <ul class="nm_list">
                     <!-- loop -->
-                    <li *ngFor="let item of list" (click)="goDetail(item.AcomId)">
-                        <div class="list_img">
-                            <img src="{{ item.link }}" alt="">
-                        </div>
-                        <div class="list_desc">
-                            <div class="list_title">
-                                <p class="list_loc">{{ item.Addr1 | sido }}</p>
-                                <h3>{{ item.AcomNm }}</h3>
+                    <li class="list_body" *ngFor="let item of list" (click)="goDetail(item.AcomId)">
+                        <a href="#">
+                            <div class="dp_td item_info">
+                                <div class="item_thumb">
+                                    <img src="{{ item.link }}" alt="">
+                                </div>
+                                <div class="item_title va_middle">
+                                    <p class="list_loc">{{ item.Addr1 | sido }}</p>
+                                    <h3>{{ item.AcomNm }}</h3>
+                                </div>
+                                <div class="item_price text-right va_middle">
+                                    <h3>
+                                        <p class="orig_price" *ngIf="item.saleRate > 0">{{ item.DFTPrice | comma }}원</p>
+                                        {{ item.price | comma }}원
+                                        <span class="point_c" *ngIf="item.saleRate > 0">
+                                            {{ item.saleRate }}%
+                                        </span>
+                                    </h3>
+                                </div>
                             </div>
-                            <div class="list_price">
-                                <p class="orig_price" *ngIf="item.saleRate > 0">{{ item.DFTPrice | comma }}원</p>
-                                {{ item.price | comma }}원
-                                <span class="point_c" *ngIf="item.saleRate > 0">
-                                    {{ item.saleRate }}%
-                                </span>
-                                <!-- {{ item.DFTPrice | comma }}원
-                                <span class="point_c" *ngIf="item.ChPrice && item.ChPrice != 0"><b>76%</b></span> -->
-                            </div>
-                        </div>
+                        </a>
                     </li>
+                    <!-- //loop -->
                 </ul>
                 <!-- <div class="pagination">
                     <a href="#" class="pre_end"><span class="blind">처음</span></a>
